[tool.poetry]
name = "multimodal4"
version = "0.1.0"
description = ""
authors = ["Hyuk Shin <hshin2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"
gradio = "^4.36.1"
openai = "^1.33.0"
chromadb = "^0.5.0"
langchain-experimental = "^0.0.60"
unstructured = {extras = ["all-docs"], version = "^0.14.5"}
pillow = "^10.3.0"
pydantic = "^2.7.3"
lxml = "^5.2.2"
matplotlib = "^3.9.0"
tiktoken = "^0.7.0"
opencv-python = "^4.10.0.82"
streamlit = "^1.35.0"
pdf2image = "^1.16.0"
pytesseract = "^0.3.10"
opencv-python-headless = "^4.10.0.82"
ipython = "^8.25.0"
faiss-cpu = "^1.8.0"
langchain-community = "^0.2.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
streamlit = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
